--- a/KsrExplorerConsoleApp/App.config
+++ b/KsrExplorerConsoleApp/App.config
@@ -15,14 +15,16 @@
   <ksrexplorer.configuration OptA="25000"
                              MainPageSize="10"
                              SqliteDbFilePath="MyDatabase2.sqlite"
+                             SqlInsertQueryFilePath="C:\ksr_cshop\file_to_insert.sql"
+                             SqlInsertQueryOneRowCount="10"
   >
     <externalUrl
       UrlA="http://gen1.gmarket.co.kr"
       UrlB="http://categorydev.gmarket.co.kr"
     />
     <folderItems>
-      <add FolPath="I:\zdata-a-03"/>
-      <add FolPath="I:\zdata1"/>
+      <add FolPath="C:\inetpub\wwwroot"/>
+      <add FolPath="C:\inetpub\custerr"/>
     </folderItems>
     <searchWordItems>
       <add DefaultSearchWord="aa bb"/>
