--- a/KsrExplorerWinForm/App.config
+++ b/KsrExplorerWinForm/App.config
@@ -7,22 +7,24 @@
 
   <connectionStrings>
     <add name="DSN_KsrExplorer"
-         connectionString="Data Source=MyDatabase.sqlite;Version=3;"
+         connectionString="Data Source=MyDatabase2.sqlite;Version=3;"
          providerName="System.Data.SQLiteClient" />
   </connectionStrings>
 
   <!-- SqliteDbFilePath 는 위의connectionString의 파일경로랑 같게 할것 -->
   <ksrexplorer.configuration OptA="25000"
                              MainPageSize="10"
-                             SqliteDbFilePath="MyDatabase.sqlite"
+                             SqliteDbFilePath="MyDatabase2.sqlite"
+                             SqlInsertQueryFilePath="C:\ksr_cshop\file_to_insert.sql"
+                             SqlInsertQueryOneRowCount="10"
   >
     <externalUrl
       UrlA="http://gen1.gmarket.co.kr"
       UrlB="http://categorydev.gmarket.co.kr"
     />
     <folderItems>
-      <add FolPath="I:\zdata-a-03"/>
-      <add FolPath="I:\zdata1"/>
+      <add FolPath="C:\inetpub\wwwroot"/>
+      <add FolPath="C:\inetpub\custerr"/>
     </folderItems>
     <searchWordItems>
       <add DefaultSearchWord="aa bb"/>
